--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       </div>
       <div class="see"><button class="btn btn-primary">See More Courses</button></div>
       <!-- Course Section End -->
-      
+      <!-- Working Men Section Start -->
       <div style="background-color: #F4FAFD">
           <div class="d-flex row flex-row flex-sm-column flex-md-column flex-lg-row">
             <div class="col"> <img src="images/working.png" class="working" alt="..."> </div>
