--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
       </div>
       <!-- Working Men Section End -->
-      <!-- Student Profile Section Start -->
+      Student Profile Section Start
       <div class="bg-primary d-flex flex-column flex-lg-row flex-md-row register text-light">
         <div>
           <h1>Ready to join?</h1>
