--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
         </div>
       </div>
-      <!-- Working Men Section End -->
+      Working Men Section End
       <!-- Student Profile Section Start -->
       <div class="bg-primary d-flex flex-column flex-lg-row flex-md-row register text-light">
         <div>
