--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       </div>
       <div class="text-center"><button class="btn btn-primary">View All</button></div>
       </div>
-      Student Profile Section End
+      <!-- Student Profile Section End -->
       <!-- Comment Section Start -->
       <div class="text-center comment">
         <h1>Some Students Feedback</h1>
